crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__test_init_3.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 221
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\ntype option 'a = None | Some 'a\nimpl Eq 'a => Eq (option 'a) where\n    eq a b =\n        case (a, b) of\n            (None, None) -> True\n            (Some x, Some y) -> eq x y\n            _ -> False\ninit self =\n    case self of\n        [] -> None\n        _ -> Some (doInit self)\ndoInit self =\n    case self of\n        [] -> trace \"unreachable\" fail\n        [_] -> []\n        x :: xs -> mkCons x (doInit xs)\nvalues : list int\nvalues = [1, 2, 3, 4]\nmain = eq (init values) (Some [1, 2, 3])\n"
---
--- unoptimized Core
let message#59 : string = "unreachable" in
let fromBool#9 : bool -> bool = \value#32 : bool -> value#32 in
let eq#42 : int -> int -> bool = equalsInteger in
letrec
  eq#12 : list 'erased -> list 'erased -> bool [static []] = \xs#33 : list 'erased ys#34 : list 'erased -> let match#46 : list 'erased = xs#33 in
  case@List match#46 of
    Nil -> let match#35 : list 'erased = ys#34 in
    case@List match#35 of
      Nil -> fromBool#9 true
      Cons field#36 field#37 -> fromBool#9 false
    Cons field#47 field#48 -> let x#38 : 'erased = field#47 in
    let restX#39 : list 'erased = field#48 in
    let match#43 : list 'erased = ys#34 in
    case@List match#43 of
      Nil -> fromBool#9 false
      Cons field#44 field#45 -> let y#40 : 'erased = field#44 in
      let restY#41 : list 'erased = field#45 in
      case@Bool eq#42 x#38 y#40 of
        True -> eq#12 restX#39 restY#41
        False -> false
in
let eq#2 : Main.option 'erased -> Main.option 'erased -> bool = \a#7 : Main.option 'erased b#8 : Main.option 'erased -> let match#13 : (Main.option 'erased, Main.option 'erased) = constr 0 a#7 b#8 in
let leaf#19 : @delay bool = delay (fromBool#9 false) in
case@Tag match#13 of
  0 field#20 field#21 -> case@Tag field#20 of
    0 -> case@Tag field#21 of
      0 -> fromBool#9 true
      1 field#22 -> force leaf#19
    1 field#23 -> case@Tag field#21 of
      0 -> force leaf#19
      1 field#24 -> let x#10 : 'erased = field#23 in
      let y#11 : 'erased = field#24 in
      eq#12 x#10 y#11 in
let fromString#50 : string -> string = \value#58 : string -> value#58 in
letrec
  doInit#27 : list int -> list int [static []] = \self#49 : list int -> let match#53 : list int = self#49 in
  case@List match#53 of
    Nil -> trace (fromString#50 message#59) in error
    Cons field#54 field#55 -> case@List field#55 of
      Nil -> (con (list integer) [])
      Cons field#56 field#57 -> let x#51 : int = field#54 in
      let xs#52 : list int = field#55 in
      mkCons x#51 (doInit#27 xs#52)
in
let init#3 : list int -> Main.option (list int) = \self#25 : list int -> let match#28 : list int = self#25 in
case@List match#28 of
  Nil -> constr 0
  Cons field#29 field#30 -> (\field#26 : list int -> constr 1 field#26) (doInit#27 self#25) in
let fromInt#6 : int -> int = \value#31 : int -> value#31 in
let values#4 : list int = mkCons (fromInt#6 1) (mkCons (fromInt#6 2) (mkCons (fromInt#6 3) (mkCons (fromInt#6 4) (con (list integer) [])))) in
let main#1 : bool = eq#2 (init#3 values#4) ((\field#5 : list int -> constr 1 field#5) (mkCons (fromInt#6 1) (mkCons (fromInt#6 2) (mkCons (fromInt#6 3) (con (list integer) []))))) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_59
    [(lam fromBool_9
      [(lam eq_42
        [(lam eq_12
          [(lam eq_2
            [(lam fromString_50
              [(lam doInit_27
                [(lam init_3
                  [(lam fromInt_6
                    [(lam values_4
                      [(lam main_1 main_1)
                        [[eq_2 [init_3 values_4]]
                          [(lam field_5 (constr 1 field_5))
                            [[(force (builtin mkCons)) [fromInt_6 (con integer 1)]]
                              [[(force (builtin mkCons)) [fromInt_6 (con integer 2)]]
                                [[(force (builtin mkCons)) [fromInt_6 (con integer 3)]] (con (list integer) [])]]]]]])
                      [[(force (builtin mkCons)) [fromInt_6 (con integer 1)]]
                        [[(force (builtin mkCons)) [fromInt_6 (con integer 2)]]
                          [[(force (builtin mkCons)) [fromInt_6 (con integer 3)]]
                            [[(force (builtin mkCons)) [fromInt_6 (con integer 4)]] (con (list integer) [])]]]]])
                    (lam value_31 value_31)])
                  (lam self_25
                    [(lam match_28
                      (case
                        match_28
                        (lam field_29
                          (lam field_30 [(lam field_26 (constr 1 field_26)) [doInit_27 self_25]]))
                        (constr 0)))
                      self_25])])
                [(lam self_14 [self_14 self_14])
                  (lam self_14
                    (lam self_49
                      [(lam match_53
                        (case
                          match_53
                          (lam field_54
                            (lam field_55
                              (case
                                field_55
                                (lam field_56
                                  (lam field_57
                                    [(lam x_51
                                      [(lam xs_52 [[(force (builtin mkCons)) x_51] [[self_14 self_14] xs_52]])
                                        field_55])
                                      field_54]))
                                (con (list integer) []))))
                          (force [[(force (builtin trace)) [fromString_50 message_59]] (delay (error))])))
                        self_49]))]])
              (lam value_58 value_58)])
            (lam a_7
              (lam b_8
                [(lam match_13
                  [(lam leaf_19
                    (case
                      match_13
                      (lam field_20
                        (lam field_21
                          (case
                            field_20
                            (case field_21 [fromBool_9 (con bool True)] (lam field_22 (force leaf_19)))
                            (lam field_23
                              (case
                                field_21
                                (force leaf_19)
                                (lam field_24 [(lam x_10 [(lam y_11 [[eq_12 x_10] y_11]) field_24]) field_23]))))))))
                    (delay [fromBool_9 (con bool False)])])
                  (constr 0 a_7 b_8)]))])
          [(lam self_16 [self_16 self_16])
            (lam self_16
              (lam xs_33
                (lam ys_34
                  [(lam match_46
                    (case
                      match_46
                      (lam field_47
                        (lam field_48
                          [(lam x_38
                            [(lam restX_39
                              [(lam match_43
                                (case
                                  match_43
                                  (lam field_44
                                    (lam field_45
                                      [(lam y_40
                                        [(lam restY_41
                                          (case
                                            [[eq_42 x_38] y_40]
                                            (con bool False)
                                            [[[self_16 self_16] restX_39] restY_41]))
                                          field_45])
                                        field_44]))
                                  [fromBool_9 (con bool False)]))
                                ys_34])
                              field_48])
                            field_47]))
                      [(lam match_35
                        (case
                          match_35
                          (lam field_36 (lam field_37 [fromBool_9 (con bool False)]))
                          [fromBool_9 (con bool True)]))
                        ys_34]))
                    xs_33])))]])
        (builtin equalsInteger)])
      (lam value_32 value_32)])
    (con string "unreachable")])
--- optimized Core
letrec
  eq#18 : list 'erased -> list 'erased -> bool [static []] = \xs#60 : list 'erased ys#61 : list 'erased -> case@List xs#60 of
    Nil -> case@List ys#61 of
      Nil -> true
      Cons field#64 field#65 -> false
    Cons field#66 field#67 -> case@List ys#61 of
      Nil -> false
      Cons field#71 field#72 -> let anf#109 : bool = equalsInteger field#66 field#71 in
      case@Bool anf#109 of
        True -> eq#18 field#67 field#72
        False -> false
in
letrec
  doInit#89 : list int -> list int [static []] = \self#90 : list int -> case@List self#90 of
    Nil -> trace "unreachable" in error
    Cons field#92 field#93 -> case@List field#93 of
      Nil -> (con (list integer) [])
      Cons field#94 field#95 -> let anf#111 : list int = doInit#89 field#93 in
      mkCons field#92 anf#111
in
let anf#117 : list int = mkCons 4 (con (list integer) []) in
let anf#118 : list int = mkCons 3 anf#117 in
let anf#119 : list int = mkCons 2 anf#118 in
let values#106 : list int = mkCons 1 anf#119 in
let anf#120 : Main.option (list int) = case@List values#106 of
  Nil -> constr 0
  Cons field#100 field#101 -> let anf#112 : list int = doInit#89 values#106 in
  constr 1 anf#112 in
let anf#125 : list int = mkCons 3 (con (list integer) []) in
let anf#126 : list int = mkCons 2 anf#125 in
let anf#127 : list int = mkCons 1 anf#126 in
let anf#128 : Main.option (list int) = constr 1 anf#127 in
let match#77 : (Main.option 'erased, Main.option 'erased) = constr 0 anf#120 anf#128 in
let leaf#78 : @delay bool = delay false in
case@Tag match#77 of
  0 field#79 field#80 -> case@Tag field#79 of
    0 -> case@Tag field#80 of
      0 -> true
      1 field#81 -> force leaf#78
    1 field#82 -> case@Tag field#80 of
      0 -> force leaf#78
      1 field#83 -> eq#18 field#82 field#83
--- optimized UPLC
(program 1.1.0
  [(lam builtin_47
    [(lam builtin_48
      [(lam partial_49
        [(lam partial_50
          [(lam partial_51
            [(lam eq_17
              [(lam doInit_27
                [(lam anf_28
                  [(lam anf_29
                    [(lam anf_30
                      [(lam values_31
                        [(lam anf_35
                          [(lam anf_36
                            [(lam anf_37
                              [(lam anf_38
                                [(lam anf_39
                                  [(lam match_40
                                    [(lam leaf_41
                                      (case
                                        match_40
                                        (lam field_42
                                          (lam field_43
                                            (case
                                              field_42
                                              (case field_43 (con bool True) (lam field_44 (force leaf_41)))
                                              (lam field_45
                                                (case field_43 (force leaf_41) (lam field_46 [[eq_17 field_45] field_46]))))))))
                                      (delay (con bool False))])
                                    (constr 0 anf_35 anf_39)])
                                  (constr 1 anf_38)])
                                [partial_49 anf_37]])
                              [partial_50 anf_36]])
                            [partial_51 (con (list integer) [])]])
                          (case
                            values_31
                            (lam field_32
                              (lam field_33 [(lam anf_34 (constr 1 anf_34)) [doInit_27 values_31]]))
                            (constr 0))])
                        [partial_49 anf_30]])
                      [partial_50 anf_29]])
                    [partial_51 anf_28]])
                  [[builtin_47 (con integer 4)] (con (list integer) [])]])
                [(lam self_19 [self_19 self_19])
                  (lam self_20
                    (lam self_21
                      (case
                        self_21
                        (lam field_22
                          (lam field_23
                            (case
                              field_23
                              (lam field_24
                                (lam field_25
                                  [(lam anf_26 [[builtin_47 field_22] anf_26]) [[self_20 self_20] field_23]]))
                              (con (list integer) []))))
                        (force [[builtin_48 (con string "unreachable")] (delay (error))]))))]])
              [(lam self_6 [self_6 self_6])
                (lam self_7
                  (lam xs_8
                    (lam ys_9
                      (case
                        xs_8
                        (lam field_12
                          (lam field_13
                            (case
                              ys_9
                              (lam field_14
                                (lam field_15
                                  [(lam anf_16
                                    (case anf_16 (con bool False) [[[self_7 self_7] field_13] field_15]))
                                    [[(builtin equalsInteger) field_12] field_14]]))
                              (con bool False))))
                        (case ys_9 (lam field_10 (lam field_11 (con bool False))) (con bool True))))))]])
            [builtin_47 (con integer 3)]])
          [builtin_47 (con integer 2)]])
        [builtin_47 (con integer 1)]])
      (force (builtin trace))])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 7088719, memory: 39223
