crates/nash-codegen/src/build/tests/source/snapshots/nash_codegen__build__tests__source__patterns__unselected_boolean_conversion_initializer_is_lazy.snap
---
source: crates/nash-codegen/src/build/tests/source/patterns.rs
assertion_line: 832
description: "module Main exposing (..)\nimport Primitive exposing (type bool(..), coerce)\nimport Bool\nimport Logic\nimport Lift exposing (Lift)\ntype alias flag = bool\nimpl Lift bool flag where\n    lift item = coerce item\n    lower = (fail \"unselected conversion\")\nvalue : flag\nvalue = coerce False\nmain : bool\nmain = Logic.or True value\n"
---
--- unoptimized Core
let message#10 : string = "unselected conversion" in
let fromBool#2 : bool -> bool = \value#8 : bool -> value#8 in
let value#3 : bool = (\coerce#9 : bool -> coerce#9) (fromBool#2 false) in
let main#1 : bool = case@Bool fromBool#2 true of
  True -> true
  False -> let message#7 : string = message#10 in
  let fromString#5 : string -> string = \value#6 : string -> value#6 in
  let lower#4 : bool -> bool = trace (fromString#5 message#7) in error in
  lower#4 value#3 in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam message_10
    [(lam fromBool_2
      [(lam value_3
        [(lam main_1 main_1)
          (case
            [fromBool_2 (con bool True)]
            [(lam message_7
              [(lam fromString_5
                [(lam lower_4 [lower_4 value_3])
                  (force [[(force (builtin trace)) [fromString_5 message_7]] (delay (error))])])
                (lam value_6 value_6)])
              message_10]
            (con bool True))])
        [(lam coerce_9 coerce_9) [fromBool_2 (con bool False)]]])
      (lam value_8 value_8)])
    (con string "unselected conversion")])
--- optimized Core
case@Bool true of
  True -> true
  False -> let lower#19 : bool -> bool = trace "unselected conversion" in error in
  lower#19 false
--- optimized UPLC
(program 1.1.0
  [(lam builtin_2
    (case
      (con bool True)
      [(lam lower_1 [lower_1 (con bool False)])
        (force [[builtin_2 (con string "unselected conversion")] (delay (error))])]
      (con bool True)))
    (force (builtin trace))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 384100, memory: 2500
